chore: fixing sonar issues (#353)
* chore: fixing sonar issues

* chore: spotless

* chore: adding tests

* chore: fixing more code smells

* chore: fixing more code smells

* chore: fixing more code smells